--- a/docs/guides/create-basic-component.mdx
+++ b/docs/guides/create-basic-component.mdx
@@ -344,7 +344,10 @@ Few things to note:
 
 Once you've updated your component, it should look like so.
 
-<img src="/public/assets/images/create-react-component/second-preview.png" />
+<img
+  src="/public/assets/images/create-react-component/second-preview.png"
+  style={{ maxWidth: "100%" }}
+/>
 
 Looking good! Now we just need to make it work. Onwards!
 
@@ -377,11 +380,17 @@ So, we need to add 2 things
 
 Put that together, and you'll have this!
 
-<img src="/public/assets/images/create-react-component/making-the-button-work-increment-onclick.png" />
+<img
+  src="/public/assets/images/create-react-component/making-the-button-work-increment-onclick.png"
+  style={{ maxWidth: "100%" }}
+/>
 
 and this right after the `return` code
 
-<img src="/public/assets/images/create-react-component/making-the-button-work-increment-handler.png" />
+<img
+  src="/public/assets/images/create-react-component/making-the-button-work-increment-handler.png"
+  style={{ maxWidth: "100%" }}
+/>
 
 Few things to note:
 
