--- a/packages/components/src/Switch/Switch.mdx
+++ b/packages/components/src/Switch/Switch.mdx
@@ -33,15 +33,15 @@ import { Switch } from "@jobber/components/Switch";
 
 <Playground>
   {() => {
-    const [value, setValue] = useState(true);
+    const [toggleState, setToggleState] = useState(true);
     const label = "Toggle example";
     return (
       <>
-        <button onClick={() => setValue(!value)}>{label}</button>
+        <button onClick={() => setToggleState(!toggleState)}>{label}</button>
         <br />
         <Switch
-          value={value}
-          onChange={newValue => setValue(newValue)}
+          value={toggleState}
+          onChange={newToggleState => setToggleState(newToggleState)}
           ariaLabel={label}
         />
       </>
