quick content update

--- a/docs/guides/create-basic-component.mdx
+++ b/docs/guides/create-basic-component.mdx
@@ -6,9 +6,9 @@ route: /guides/how-to-create-a-basic-react-component
 
 # Create your own component
 
-So, you want to create a react component in atlantis but, you don't know where
-to start. This guide would help you understand the basic concepts around
-building a component in Atlantis.
+So, you want to create a react component in Atlantis but, you don't know where
+to start. This guide will help show you the basic concepts around creating a
+component in Atlantis.
 
 ## Before we start
 
@@ -66,9 +66,9 @@ Right, I promised to explain them.
 
 | File name                | Description                                                                                                                                                                                                 |
 | :----------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `index.ts`               | This tells react what to render. Honestly, You'd rarely to touch this.                                                                                                                                      |
+| `index.ts`               | This tells react what to render. Honestly, You'd rarely have to touch this.                                                                                                                                 |
 | `AmountCounter.tsx`      | This file is where you make the magic happen.                                                                                                                                                               |
-| `AmountCounter.mdx`      | This creates the page that you see in Atlantis. This is where you explain what the magic is doing.                                                                                                          |
+| `AmountCounter.mdx`      | This creates the page that you see under Components/AmountCounter. This is where you explain what the magic is doing.                                                                                       |
 | `AmountCounter.test.tsx` | Self explanatory.                                                                                                                                                                                           |
 | `AmountCounter.css`      | Self explanatory.                                                                                                                                                                                           |
 | `AmountCounter.css.d.ts` | This wasn't on the original list but it's very important. This is how react knows what class names you added and automagically serializes them so it doesn't clash with other components. More on it later. |
@@ -87,12 +87,12 @@ should have.
 This makes it easier to write the code because we now have an idea on what the
 HTML elements and types of props the component could take. We'll ignore the card
 for now as components should be useable on its own anywhere and a card would
-restrict the overall re-usability of this component. #componentThinking
+restrict the overall re-usability of this component. _#componentThinking_
 
 Alternatively, you can also create a
 [proposal doc](https://github.com/GetJobber/atlantis/blob/master/docs/proposals/TEMPLATE.md)
-to help better understand what you're building. If you just wanna see how to
-build a react component first, then off we go!
+to help better understand and plan out what you're building. If you just wanna
+see how to build a react component first, then off we go!
 
 ### Time to write some code
 
@@ -107,11 +107,14 @@ main categories.
   style={{ maxWidth: "100%" }}
 />
 
-We'll get in to more detail about `classnames` and `styles` later.
+We'll get in to more detail about the `styles` later. Also, I've deleted the
+`classname` import from the boilerplate because that needs its own
+documentation. If you're curious what `classname` is, read their
+[GitHub page](https://github.com/JedWatson/classnames).
 
 ### Interface
 
-This is where you specify the prop types that we got from the annotations
+This is where you specify the prop types that we got from our annotations
 earlier.
 
 <img
@@ -119,8 +122,8 @@ earlier.
   style={{ maxWidth: "100%" }}
 />
 
-_WHAT?! Where did those come from? What is happening? I thought this was
-simple._
+_"WHAT?! Where did those come from? What is happening? I thought this was
+simple."_
 
 Let's break it down, shall we?
 
@@ -132,7 +135,7 @@ Let's break it down, shall we?
 | `description?` `onChange?`         | Still a prop name but this time it's optional. That means the component—if written properly—would still work without these props.                                      |
 | `string` `number` `boolean` `void` | This is the basic prop types you can use. This makes sure that you can only pass in the specified type to make the component predictable and manageable.               |
 
-_What about the `onChange?()` prop? It looks different_
+_"What about the `onChange?()` prop? It looks different"_
 
 Yes, because it's a callback. They're used to tell the parent component that the
 `AmountCounter` changed and it returned a new value. Now, some components need
@@ -141,8 +144,8 @@ what kind of component are you writing. In our case, we need it because we need
 to know that clicking the +/- buttons increments or decrements and it returns a
 new value.
 
-_Ok, but we specified increment and decrement on the annotations as prop types.
-I don't see that here._
+_"Ok, but we specified increment and decrement on the annotations as prop types.
+I don't see that here."_
 
 True, part of building a component is to make sure you only specify what you
 need and improve overtime. I think the `onChange()` could encompass both
@@ -152,7 +155,7 @@ increment and decrement. I could be wrong, but let's see where this takes us.
 
 Now that we know the base props that we need. Yes, I said _base_ because it
 might need more than what we specified. First up, we need to tell the component
-about the props we specified like so:
+about the props we specified like so…
 
 <img
   src="/public/assets/images/create-react-component/component-props.png"
@@ -162,7 +165,7 @@ about the props we specified like so:
 At this point, typescript is probably giving you an error that says
 `'title' is defined but never used`.
 
-_Oh man, typescript is already mad at me_
+_"Oh man, typescript is already mad at me"_
 
 First of all [insert meme here], it's a machine, it got no feelings, aight?
 Second it's just telling you that you ain't using the thing yet. That's helpful
@@ -175,7 +178,7 @@ Anyhoo, let's break it down
 | `export`                      | This allows us to use the component everywhere! Granted you `import` them; we'll get to that later.                     |
 | `function`                    | Self explanatory.                                                                                                       |
 | `AmountCounter`               | Component name and also the function name. But, you already knew that.                                                  |
-| `{ title, description, ... }` | Defines the props that you'd like to use from AmountCounterProps.                                                       |
+| `{ title, description, ... }` | Defines the props that you'd like to use from `AmountCounterProps`.                                                     |
 | `AmoutCounterProps`           | Reference to the `interface` that we specified earlier. This is how the component knows the props and types we can use. |
 
 #### Writing the HTML structure
@@ -247,7 +250,7 @@ Few things to note about that code snippet:
 - `AmountCounter`'s HTML attributes are basically the props that we specified
   earlier.
 
-Go to **Components > AmountCounter**. If everything is correct, you should see
+Go to **Components/AmountCounter**. If everything is correct, you should see
 something like this:
 
 <img
@@ -261,9 +264,9 @@ busts the cache 🔥 and re-render everything.
 
 ## Style me up!
 
-Now that we have the basic structure, we can style to look like the mockup.
-Let's reference the mockup again. This time, it's annotated by a simple grid
-system.
+Now that we have the basic structure, we can style our component to look like
+the mockup. Let's reference the mockup again. This time, it's annotated by a
+simple grid system.
 
 <img
   src="/public/assets/images/create-react-component/AmountPicker-gridified.png"
@@ -287,15 +290,15 @@ Once grouped, you should have something like this:
 At this point, you'd get an error from typescript that's something around
 `property 'wrapper' doesn't exists` on the CSS file.
 
-_Yes! I know it's not there because I haven't written it yet! It doesn't need to
-remind me that everytime!!_
+_"Yes! I know it's not there because we haven't written it yet! Typescript
+doesn't need to remind me about that everytime!!"_
 
 If you look at it as like a halfway TDD, those red underline things are errors
 that you need to get rid of by continuing to write the code! TDD Red, Green,
 Refactor, amirite? Onwards!
 
-_Quick question, what's with the `styles.wrapper` why not just type the class
-name directly?_
+_"Quick question, what's with the `styles.wrapper` why not just type the class
+name directly?"_
 
 We have to serialize those class names so it doesn't clash with other class
 names. Plus, naming is hard so you can keep writing `wrapper` on all of the
@@ -329,7 +332,8 @@ There's nothing special here just a plain ol CSS. Open up your
 }
 ```
 
-I've also update the template to get the layout working.
+That should get rid of the errors from earlier. I've also update the template to
+get the layout look closed to the mockup.
 
 <img
   src="/public/assets/images/create-react-component/component-using-icons.png"
@@ -371,7 +375,7 @@ and why it's the preferred way over
 To keep it simple, let's start with the increment button first and worry about
 decrement later once we're happy with the code we've written.
 
-So, we need to add 2 things
+So, we need to add 2 things to make the increment button work.
 
 - `onClick` attribute for the button so it knows to fire a click event on… well…
   click
@@ -394,16 +398,22 @@ and this right after the `return` code
 
 Few things to note:
 
-1. Prefixed `on` for prop names to match reacts built-in event handlers.
-2. The same goes to `handle` for function names. Naming is hard, so the more we
+1. The `onClick` is a
+   [react event handler](https://reactjs.org/docs/handling-events.html) that
+   closely mimics events on DOM elements.
+2. If you do get to a point where you have to create your own event handler.
+   Prefix the attribute name with `on` to match
+   [reacts built-in event handlers](https://reactjs.org/docs/handling-events.html).
+3. The same goes to `handle` for function names. Naming is hard, so the more we
    can not think about it, the better.
-3. Added a `console.log` so we can see that it fires the `handleIncrement`
+4. Added a `console.log` so we can see that it fires the `handleIncrement`
    function after the click.
-4. We'll fire the `onChange` callback prop in here with the new value so the
+5. We'll fire the `onChange` callback prop in here with the new value so the
    parent component have a way to know that `AmountCounter` has changed and
    there's a new value.
 
-Right now, typescript is probably giving you this message right now.
+Right now, typescript is probably giving you this message on the `onChange`
+prop.
 
 ```
 Cannot invoke an object which is possibly 'undefined'.ts(2722)
@@ -414,25 +424,25 @@ _OMG! Typescript is the worst!_
 Hold your horses there, partner. Typescript is there to prevent us, humans, from
 making a silly mistake. For every typescript error, there's always a `ts(XXXX)`
 that references back to an in-depth explanation on what the error is about.
-Google is free, you should use it.
+Google is _free_, you should use it.
 
 So what's the issue? The `onChange` is an optional prop. Which means we have to
 make sure that the `onChange` callback only fires when it can actually be fired.
-It means, we need to guard it by checking if `onChange` is defined.
+It means, we need to guard it by checking if `onChange` is defined. Like so…
 
 ```
 onChange && onChange(newValue)
 ```
 
-> Tip: That's a shorthand for `if (onChange) {}`.
+> Tip: That's a shorthand for `if (onChange) {...}`.
 
 ### Pop quiz!
 
 Do the decrement part yourself because it's the exact opposite of increment. You
 should be able to handle that.
 
-All done? Great! Now that we have the buttons firing an event when we need to,
-we need to catch those events and get this component updating its value!
+All done? Great! Now that we have the buttons firing an event, we need to catch
+those events and get this component updating its value by using a state!
 Onwards!
 
 ### On to the states!
@@ -472,16 +482,13 @@ the `AmountCounter`'s playground.
 ```
 
 And don't forget to add this on the `import` part of the `.mdx` so we can use
-the `useState` from react.
+the `useState` from react. It's a new way of adding and updating the state. I
+suggest you
+[read more about it](https://reactjs.org/docs/hooks-reference.html#usestate).
 
 ```
 import { useState } from "react";
 ```
-
-Few things to note here
-
-- [`useState`](https://reactjs.org/docs/hooks-reference.html#usestate) is a new
-  React way of adding and updating a state. I suggest you read more about it.
 
 You should be able to interact with your component now! 🎉
 
@@ -492,8 +499,8 @@ You should be able to interact with your component now! 🎉
 
 ## Conclusion
 
-Creating a new react component is overwhelming. There's so many ways to write
-it. But this should set you on a right path on how to write components the
+Creating a new react component is overwhelming. There are so many ways to write
+it. But, this should set you on a right path on how to write components the
 atlantis way. Most importantly, write it the way you'd understand it. Yes,
 there's always a better way to write code but, with enough collaboration, you'd
-learn those better ways too.
+learn those better ways too. Cheers 🥂
