--- a/docs/getting-started-with-react/getting-started-with-react.mdx
+++ b/docs/getting-started-with-react/getting-started-with-react.mdx
@@ -4,8 +4,8 @@ menu: Guides
 route: /guides/react
 ---
 
+import { useState } from "react";
 import { Playground } from "docz";
-import { Button } from "@jobber/components/Button";
 
 # Getting Started with React
 
@@ -94,5 +94,114 @@ As mentioned above a lot of the power of React comes from being able to build
 components out of other components. Lets take a look at an example on how to do
 that.
 
+For this example we are going to build a card that allows you to enter a topic
+and then search for a related gif.
+
+import { Card } from "@jobber/components/Card";
+import { Content } from "@jobber/components/Content";
+import { Button } from "@jobber/components/Button";
+import { InputText } from "@jobber/components/InputText";
+import { loadingGIF, getGIF } from "./getGIF";
+
+<Playground>
+  {() => {
+    const [topic, setTopic] = useState();
+    const [url, setURL] = useState();
+
+    return (
+      <Card title="Gif Gift">
+        <Content>
+          <InputText
+            value={topic}
+            onChange={setTopic}
+            placeholder="Topic"
+          />
+          <Button label="Search" fullWidth={true} onClick={gifSearch} />
+
+          <center>{url && <img src={url} />}</center>
+        </Content>
+      </Card>
+    );
+
+    async function gifSearch() {
+      setURL(loadingGIF);
+      setURL(await getGIF(topic));
+    }
+
+}}
+
+</Playground>
+
+> **Note:**
+>
+> This example assumes the presence of a constant `const loadingGIF: string;`
+> which will contain the URL to a loading gif as well as a function
+> `function getGIF(topic: string): Promise<string>;` that will return a promise
+> resolving to a url.
+
+### Breaking it Down
+
 ```tsx
+const [topic, setTopic] = useState();
+const [url, setURL] = useState();
 ```
+
+The example starts with
+[defining two stateful variables using the `useState` hook ↗](https://reactjs.org/docs/hooks-overview.html#state-hook).
+`useState` returns a pair. The first of which is the current value and the
+second is a setter that allows you to update the value. For this component we
+need one stateful value to represent the content of the input and another to
+store the result of the `gifSearch`.
+
+---
+
+```tsx
+return (
+  <Card title="Gif Gift">
+...
+```
+
+The next section is the return value which will return the TSX defining our
+component. In here you can see that our `GifGift` component is composed of the
+following other react components:
+
+- `Card` — [Docs](/components/card)
+- `Content` — [Docs](/components/content)
+- `Button` — [Docs](/components/button)
+- `InputText` — [Docs](/components/input-text)
+
+If you look at the docs for the above components you can see how the different
+props they expose allow us to customize their behaviour given the needs of our
+`GifGift` component.
+
+> **Note:**
+>
+> Normally when you use a component you would need to import it. The docs for
+> each component start with the import path for that component.
+>
+> ```ts
+> import { Button } from "@jobber/components/Button";
+> ```
+>
+> This means for the above example we would need to import the following
+>
+> ```ts
+> import { Card } from "@jobber/components/Card";
+> import { Content } from "@jobber/components/Content";
+> import { Button } from "@jobber/components/Button";
+> import { InputText } from "@jobber/components/InputText";
+> ```
+
+---
+
+```tsx
+async function gifSearch() {
+  setURL(loadingGIF);
+  setURL(await getGIF(topic));
+}
+```
+
+The final part of our example defines the custom actions needed to power our
+component. In this case the action when the user clicks on the **Search**
+button. Here we call the `setURL` setter to show the `loadingGIF`. Then, we call
+`setURL` awaiting the async response of `getGIF`.
