Add ability to click on items in list

--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -32,7 +32,7 @@ import { Autocomplete } from "@jobber/components/Autocomplete";
     );
 
     function onChange(selectedOption) {
-      console.log("An option was selected");
+      console.log("An option was selected", selectedOption);
     }
 
     async function getOptions(text) {
