--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -6,6 +6,7 @@ route: /components/autocomplete
 
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
+import { Button } from "../Button";
 import { Autocomplete } from ".";
 import { useState } from "react";
 
@@ -21,26 +22,29 @@ import { Autocomplete } from "@jobber/components/Autocomplete";
 
 <Playground>
     {() => {
-    const [value, setValue] = useState("");
     const options = [
         { value: "1", label: "Nostromo" },
         { value: "2", label: "Rodger Young" },
         { value: "3", label: "Serenity" },
         { value: "4", label: "Sleeper Service" },
-        { value: "5", label: "USS Enterprise" },
-        { value: "6", label: "Serenity Now" },
+        { value: "5", label: "Enterprise" },
+        { value: "6", label: "Enterprise-D" },
       ];
+
+    const [value, setValue] = useState("");
 
     return (
       <>
-      {value}
+      <pre>{JSON.stringify(value, undefined, 2)}</pre>
       <Autocomplete
         value={value}
-        initialOptions={options}
+        initialOptions={[]}
         onChange={setValue}
         getOptions={getOptions}
         placeholder="Search for something"
       />
+      <Button label="Choose the Enterprise" onClick={() => {setValue(options[4])}} />
+      <Button label="Reset" onClick={() => {setValue()}} />
       </>
     );
 
