--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -34,8 +34,6 @@ import { Autocomplete } from "@jobber/components/Autocomplete";
     const [value, setValue] = useState("");
 
     return (
-      <>
-      <pre>{JSON.stringify(value, undefined, 2)}</pre>
       <Autocomplete
         value={value}
         initialOptions={[]}
@@ -43,22 +41,15 @@ import { Autocomplete } from "@jobber/components/Autocomplete";
         getOptions={getOptions}
         placeholder="Search for something"
       />
-      <Button label="Choose the Enterprise" onClick={() => {setValue(options[4])}} />
-      <Button label="Reset" onClick={() => {setValue()}} />
-      </>
     );
 
-    async function getOptions(text) {
-      return new Promise(resolve => {
-        setTimeout(() => {
-          if (text === "") {
-            resolve(options);
-          }
+    function getOptions(text) {
+      if (text === "") {
+        return options;
+      }
 
-          const filterRegex = new RegExp(text, "i");
-          resolve(options.filter(option => option.label.match(filterRegex)));
-        }, 300);
-      });
+      const filterRegex = new RegExp(text, "i");
+      return options.filter(option => option.label.match(filterRegex));
     }
 
 }}
@@ -78,10 +69,92 @@ import { Autocomplete } from "@jobber/components/Autocomplete";
   See `Button.mdx` for a good example of this.
 -->
 
-## Loud
+## Setting Value
 
-Use `loud` to indicate that a component is yelling.
+You can supply a value to `Autocomplete` in the form of an active `Option`.
 
 <Playground>
-  <Autocomplete text="Fred" loud={true} />
+    {() => {
+    const options = [
+        { value: "1", label: "Nostromo" },
+        { value: "2", label: "Rodger Young" },
+        { value: "3", label: "Serenity" },
+        { value: "4", label: "Sleeper Service" },
+        { value: "5", label: "Enterprise" },
+        { value: "6", label: "Enterprise-D" },
+      ];
+
+    const [value, setValue] = useState("");
+
+    return (
+      <>
+      <pre>{JSON.stringify(value, undefined, 2)}</pre>
+      <Autocomplete
+        value={value}
+        initialOptions={[]}
+        onChange={setValue}
+        getOptions={getOptions}
+        placeholder="Search for something"
+      />
+      <Button label="Choose the Enterprise" onClick={() => {setValue(options[4])}} />
+      <Button label="Reset" onClick={() => {setValue()}} />
+      </>
+    );
+
+    function getOptions(text) {
+      if (text === "") {
+        return options;
+      }
+
+      const filterRegex = new RegExp(text, "i");
+      return options.filter(option => option.label.match(filterRegex));
+    }
+
+}}
+
+</Playground>
+
+## Async Requests for Options
+
+The `getOptions` method expected to be async so you can do any desired requests
+using either promises or `await` in `getOptions`.
+
+<Playground>
+    {() => {
+    const options = [
+        { value: "1", label: "Nostromo" },
+        { value: "2", label: "Rodger Young" },
+        { value: "3", label: "Serenity" },
+        { value: "4", label: "Sleeper Service" },
+        { value: "5", label: "Enterprise" },
+        { value: "6", label: "Enterprise-D" },
+      ];
+
+    const [value, setValue] = useState("");
+
+    return (
+      <Autocomplete
+        value={value}
+        initialOptions={[]}
+        onChange={setValue}
+        getOptions={getOptions}
+        placeholder="Search for something"
+      />
+    );
+
+    async function getOptions(text) {
+      return new Promise(resolve => {
+        setTimeout(() => {
+          if (text === "") {
+            resolve(options);
+          }
+
+          const filterRegex = new RegExp(text, "i");
+          resolve(options.filter(option => option.label.match(filterRegex)));
+        }, 300);
+      });
+    }
+
+}}
+
 </Playground>
