--- a/packages/components/src/List/List.mdx
+++ b/packages/components/src/List/List.mdx
@@ -21,36 +21,41 @@ import { List } from "@jobber/components/List";
 
 <Playground>
   <Card>
-    <List items={[
-      {
-        id: 1,
-        icon: "checkmark",
-        iconColor: "green",
-        title: "Jordan Yeo completed a visit",
-        content: "Build a deck",
-        date: "Sep 24, 2019",
-        href: "#",
-        isActive: true,
-      },
+    <List
+      sectioned={true}
+      items={[
+        {
+          id: 1,
+          icon: "checkmark",
+          iconColor: "green",
+          title: "Jordan Yeo completed a visit",
+          content: "Build a deck",
+          date: "Sep 24, 2019",
+          href: "#",
+          isActive: true,
+          section: "Notification",
+        },
 
-      {
-        id: 2,
-        icon: "gift",
-        content: "Nullam id dolor id nibh ultricies vehicula ut id elit. Fusce dapibus, tellus.",
-        date: "Sep 24, 2019",
-        onClick: () => alert("🚀"),
-      },
+        {
+          id: 2,
+          icon: "gift",
+          content: "Nullam id dolor id nibh ultricies vehicula ut id elit. Fusce dapibus, tellus.",
+          date: "Sep 24, 2019",
+          onClick: () => alert("🚀"),
+          section: "Notification",
+        },
 
-      {
-        id: 3,
-        icon: "wallet",
-        iconColor: "orange",
-        content: "Payment for Invoice #39",
-        amount: "$300.00",
-        date: "Sep 25, 2019",
-      },
-    ]}
-    sectionedBy="date" />
+        {
+          id: 3,
+          icon: "wallet",
+          iconColor: "orange",
+          content: "Payment for Invoice #39",
+          amount: "$300.00",
+          date: "Sep 25, 2019",
+          section: "Billing",
+        },
+      ]}
+    />
 
   </Card>
 </Playground>
