support multi content

--- a/packages/components/src/List/List.mdx
+++ b/packages/components/src/List/List.mdx
@@ -29,7 +29,7 @@ import { List } from "@jobber/components/List";
           icon: "checkmark",
           iconColor: "green",
           title: "Jordan Yeo completed a visit",
-          content: "Build a deck",
+          content: ["Build a deck", "Fa la la la la"],
           date: "Sep 24, 2019",
           href: "#",
           isActive: true,
