--- a/packages/components/src/List/List.mdx
+++ b/packages/components/src/List/List.mdx
@@ -7,6 +7,7 @@ route: /components/list
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { List } from ".";
+import { ListItem } from "./ListItem";
 import { Card } from "../Card";
 
 # List
@@ -98,3 +99,7 @@ import { List } from "@jobber/components/List";
 ## Props
 
 <Props of={List} />
+
+## List item props
+
+<Props of={ListItem} />
